--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -15,7 +15,6 @@
         width: 100%;
         display: flex;
         justify-content: flex-end;
-        padding: 31px 10px  0 0;
         @include media(medium){
            display: none;
         }
@@ -61,4 +60,5 @@
 }
 .active{
     display: flex;
+    z-index: 999;
 }
