--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,12 @@
 @import 'page/page';
 @import 'page/home';
 @import 'page/portfolio';
+@import 'page/method';
+
+
+//component
+@import 'components/card';
+
 
 
 
