--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,4 +1,9 @@
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
     background-color: #F6EAFF;
     height: 87px;
     @include media(medium){
@@ -60,5 +65,4 @@
 }
 .active{
     display: flex;
-    z-index: 999;
 }
