--- a/src/scss/page/portfolio.scss
+++ b/src/scss/page/portfolio.scss
@@ -1,12 +1,17 @@
 .portfolio{
     text-align: center;
     &__content{
-        display: grid;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 48px;
+        z-index: -1;
         span{
             filter: drop-shadow(0px 8px 24px rgba(0, 0, 0, 0.05));
+            img{
+                display: block;
+            }
         }
     }
 }
