--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -27,6 +27,6 @@
     background-image: url('../../../img/card/secondary.svg');
 }
 .thirdary{
-    background-image: url('../../../img/card/');
+    background-image: url('../../../img/card/thirdary.svg');
 
 }
