--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,10 @@
 @import 'page/page';
 @import 'page/home';
 @import 'page/portfolio';
+@import 'page/info';
+@import 'page/services';
 @import 'page/method';
+
 
 
 //component
