add contact mobile page

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -63,7 +63,7 @@
     border: none;
     font-size: 18px;
     font-family: "openSans";
-    padding: 18px 14px;
+    padding: 0 14px;
 }
 .btn-primary{
     background-color: var(--background-btn-color);
