--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,11 +15,15 @@
 @import 'page/info';
 @import 'page/services';
 @import 'page/method';
+@import 'page/contact';
+
 
 
 
 //component
 @import 'components/card';
+@import 'components/input';
+
 
 
 
