--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -5,9 +5,24 @@
     height: 357px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 24px;
     align-items: center;
     margin: auto;
+    @include media (small){
+        width: 307px;
+        height: 364px;
+        gap: 5px;
+        padding: 8px;
+    }
+    h3{
+        text-align: center;
+        @include media(small){
+            height: 60px;
+            display: flex;
+            align-items: center;
+        }
+    }
     &__img{
         background-repeat: no-repeat;
         width: 172px;
