--- a/src/scss/components/input.scss
+++ b/src/scss/components/input.scss
@@ -5,8 +5,14 @@
     border: 2px solid rgba(239, 145, 142, 0.25);
     border-radius: 8px;
     padding: 8px;
+    @include media (small){
+        width: 500px;
+        height: 50px;
+        max-width: none;
+    }
+
 }
 .textarea{
-    height: 100px;
+    height: 130px;
     resize: none;
 }
