--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,3 +1,8 @@
+footer{
+    background-image: url('../../../img/bkg/pointbkg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .footer{
     display: flex;
     flex-direction: column;
@@ -16,6 +21,11 @@
         @include media(small){
             flex-direction: row;
             font-size: 24px;
+        }
+        a{
+            @include media (small){
+               font-size: 18px;
+            }
         }
     }
     &__reseaux{
