--- a/src/scss/page/home.scss
+++ b/src/scss/page/home.scss
@@ -20,19 +20,39 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 26px;
+    @include media(small){
+        flex-direction: row;
+        align-items: center;
+    }
     &__info{
         display: flex;
         flex-direction: column;
         gap: 26px;
+        text-align: center;
+        @include media(small){
+            height: fit-content;
+        }
         &-titel{
             font-size: 28px;
+            @include media(small){
+               font-size: 36px;
+            }
         }
         &-txt{
             font-size: 18px;
+            @include media(small){
+                font-size: 24px;
+             }
         }
     }
     &__img{
         margin: auto;
+        img{
+            @include media(small){
+                height: 400px;
+                width: auto;
+             }
+        }
     }
 }
 
