--- a/src/scss/page/services.scss
+++ b/src/scss/page/services.scss
@@ -3,5 +3,9 @@
     display: flex;
     flex-direction: column;
     gap: 73px;
+    @include media (small){
+      flex-direction: row;
+      gap: 21px;
+  }
    }
 }
