--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -10,7 +10,7 @@
     align-items: center;
     margin: auto;
     @include media (small){
-        width: 307px;
+        width: 279px;
         height: 364px;
         gap: 5px;
         padding: 8px;
@@ -33,6 +33,9 @@
     }
     &__info{
         text-align: center;
+        @include media(small){
+font-size: 18px;
+        }
     }
 }
 .primary{
