--- a/src/scss/page/contact.scss
+++ b/src/scss/page/contact.scss
@@ -5,7 +5,15 @@
     &__form{
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 23px;
         align-items: center;
+    }
+    input[type=submit]{
+        background-image: url('../../../img/icon/bi_send-check-fill.svg');
+        background-repeat: no-repeat;
+        background-position: 137px 18px;
+        max-width: fit-content;
+        min-width: 186px;
+
     }
 }
