--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -9,11 +9,20 @@
     gap: 24px;
     align-items: center;
     margin: auto;
+    border-radius: 8px;
+    box-shadow: 0px 8px 24px rgba(36, 36, 36, 0.15);
     @include media (small){
         width: 279px;
         height: 364px;
         gap: 5px;
         padding: 8px;
+    }
+    @include media (medium){
+        width: 380px;
+        height: 425px;
+        gap: 19px;
+        padding: 42px 11px;
+        margin: 0;
     }
     h3{
         text-align: center;
@@ -34,7 +43,7 @@
     &__info{
         text-align: center;
         @include media(small){
-font-size: 18px;
+        font-size: 18px;
         }
     }
 }
