--- a/src/scss/page/contact.scss
+++ b/src/scss/page/contact.scss
@@ -1,4 +1,9 @@
 .contact{
+    @include media(medium){
+        background-image: url('../../../img/contact/Group\ 29.svg');
+        background-repeat: no-repeat;
+        background-position: top;
+    }
     @include media(large){
         padding: 75px 0;
     }
@@ -14,6 +19,6 @@
         background-position: 137px 18px;
         max-width: fit-content;
         min-width: 186px;
-
+        cursor: pointer;
     }
 }
