--- a/src/scss/page/info.scss
+++ b/src/scss/page/info.scss
@@ -11,7 +11,10 @@
         flex-direction: column;
         gap: 23px;
         @include media(large){
+            background-image: url('../../../img/info/bkg.svg');
+            background-repeat: no-repeat;
             flex-direction: row;
+            background-position: right 0;
         }
     }
     &__img{
