--- a/src/scss/page/portfolio.scss
+++ b/src/scss/page/portfolio.scss
@@ -1,20 +1,21 @@
 .portfolio{
     text-align: center;
-    display: flex;
+        display: flex;
         flex-direction: column;
         gap: 23px;
-        @include media(largeXl){
+        @include media(large){
            padding-top: 0;
+           padding-bottom: 75px;
         }
     &__content{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 23px;
+        gap: 81px;
         @include media(medium){
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
         }
         span{
             filter: drop-shadow(0px 8px 24px rgba(0, 0, 0, 0.05));
