--- a/src/scss/page/services.scss
+++ b/src/scss/page/services.scss
@@ -1,7 +1,8 @@
 .services{
-   @include media(large){
-      padding: 75px 0;
-  }
+   @include media (large){
+   padding-top: 0;
+   padding-bottom: 75px;
+    }
    &__content{
     display: flex;
     flex-direction: column;
@@ -9,9 +10,15 @@
     @include media (small){
       gap: 23px;
   }
-  @include media (medium){
-  flex-direction: row;
-}
+@include media (medium){
+   flex-direction: row;
+   gap: 20px;
+   justify-content: center;
+   align-items: center;
+ }
+ @include media (large){
+   gap: 79px;
+ }
 
    }
 }
