add folder class-utils

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,12 +17,21 @@
 @import 'page/method';
 @import 'page/contact';
 
-
-
-
 //component
 @import 'components/card';
 @import 'components/input';
+@import 'components/button';
+
+//class utiles
+@import 'class-utils/spacing';
+@import 'class-utils/title';
+@import 'class-utils/screen';
+@import 'class-utils/links';
+
+
+
+
+
 
 
 
