--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-image: url('../../../img/bkg/pointbkg.png');
+    background-image: url('../../../img/background/footer/background-footer.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
