--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -6,9 +6,11 @@
     width: 100vw;
     background-color: #F6EAFF;
     height: 87px;
+
     @include media(medium){
         background-color: transparent;
     }
+
     @include media(largeXl){
         height: 105px;
         padding-top: 0;
@@ -17,22 +19,23 @@
        align-items: center;
        justify-content: center;
     }
-    /* global */
+
     a{
         text-decoration: none;
         color: var(--txt-primary-color);
         font-size: 22px;
     }
-/* icon menu */
-    &__icon{
+
+    &__icon-menu{
         width: 100%;
         display: flex;
         justify-content: flex-end;
+
         @include media(medium){
            display: none;
         }
     }
-    /* menu ouvert */
+
     &__nav{
         display: none;
         flex-direction: column;
@@ -42,6 +45,7 @@
         gap: 42px;
         border-top: 1px solid var(--border-color);
         padding-top: 15px;
+
         @include media(medium){
             display: flex;
             flex-direction: row;
@@ -50,14 +54,17 @@
             border: none;
             padding: 0;
         }
+
         @include media(large){
             padding: 15px;
         }
+
         @include media(largeXl){
             padding: 0;
             gap: 275px;
         }
-        /* li */
+
+
         &-list{
             display: flex;
             flex-direction: column;
@@ -67,9 +74,11 @@
                 flex-direction: row;
             }
         }
+
         &-reseaux{
             display: flex;
             gap: 4px;
+
             a{
                 display: flex;
                 align-items: center;
@@ -80,6 +89,7 @@
         }
     }
 }
+
 .active{
     display: flex;
 }
