--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,51 +1,35 @@
 //Abstract
-@import 'sass-utils/mixins';
-@import 'typo/font';
+@import "sass-utils/mixins";
+@import "typo/font";
 //base
-@import 'base/reset';
-@import 'base/body';
-@import 'base/base';
+@import "base/reset";
+@import "base/body";
+@import "base/base";
 //layout
-@import 'layout/header';
-@import 'layout/footer';
-//page
-@import 'page/page';
-@import 'page/home';
-@import 'page/portfolio';
-@import 'page/info';
-@import 'page/services';
-@import 'page/method';
-@import 'page/contact';
+@import "layout/header";
+@import "layout/footer";
+//sections
+@import "sections/home";
+@import "sections/portfolio";
+@import "sections/about";
+@import "sections/services";
+@import "sections/method";
+@import "sections/contact";
 
 //component
-@import 'components/card';
-@import 'components/input';
-@import 'components/button';
+@import "components/card";
+@import "components/input";
+@import "components/button";
 
 //class utiles
-@import 'class-utils/spacing';
-@import 'class-utils/title';
-@import 'class-utils/screen';
-@import 'class-utils/links';
+@import "class-utils/paddingScreen";
+@import "class-utils/title";
+@import "class-utils/screen";
+@import "class-utils/links";
+@import "class-utils/links";
+@import "class-utils/home-paddingTop";
+@import "class-utils/padding-header";
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+//background
+@import "background-image/backgroundHome";
