start add hover on button

--- a/src/scss/background-image/backgroundHome.scss
+++ b/src/scss/background-image/backgroundHome.scss
@@ -21,7 +21,7 @@
 
     &__info{
         @include media(medium){
-            background-image: url('../../../img/home/large/wave-large.svgo');
+            background-image: url('../../../img/home/large/wave-large.svg');
             background-position: right;
         }
     }
