--- a/src/scss/class-utils/column.scss
+++ b/src/scss/class-utils/column.scss
@@ -17,6 +17,8 @@
   &__mobile {
     display: flex;
     flex-direction: column;
+    gap: 36px;
+
 
     @include media(medium) {
       display: none;
