--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -12,6 +12,10 @@
     font-family: "openSans";
     padding: 0 14px;
     box-shadow: 0px 8px 24px rgba(36, 36, 36, 0.15);
+    &:hover{
+        transform: scale(1.05);
+        transition-duration: 1s;
+    }
 }
 
 .btn-primary{
